--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,48 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, system-ui, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --accent-color: #421df9;
+  --border-shadow-color: rgba(255, 255, 255, 0.5);
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+body {
+  --bg-color: #f5f5f5;
+  --text-button-color: #f5f5f5;
+  --accent-color-hover: #9681ff;
+  --text-color: #000000;
+
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  min-height: 100vh;
   margin: 0;
+  background-color: var(--bg-color);
+  background-attachment: fixed;
+  text-align: center;
+  color: var(--text-color);
+  background-blend-mode: darken;
+  overflow-y: auto;
+}
+
+main {
+  flex-grow: 1;
+  font-size: 16px;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  font-weight: 500;
+  color: var(--text-color);
+  text-decoration: inherit;
+  transition: all 0.3s ease;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media (hover: hover) {
+  a:hover {
+    color: var(--accent-color);
   }
 }
