--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,10 +1,13 @@
 .navMenu {
-  margin: 20px;
+  margin: 0 0 10px 0;
 }
 
 .menuButton {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
   padding: 7px 20px;
-  margin: 40px;
+  margin: 20px;
   border-radius: 10px;
   background-color: var(--accent-color);
   color: var(--text-button-color);
