--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,12 +11,18 @@
   --modal-shadow: rgba(0, 0, 0, 0.5);
 }
 
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+
 body {
   --bg-color: #f5f5f5;
   --text-button-color: #f5f5f5;
   --accent-color-hover: #9681ff;
   --text-color: #000000;
   --table-color: #c1c1bf;
+  --scrollbar-color: #97b8ff;
 
   display: flex;
   flex-direction: column;
@@ -32,18 +38,24 @@ body {
 }
 
 main {
+  display: block;
   margin: 0 30px;
   flex-grow: 1;
   font-size: 16px;
   text-align: left;
 }
 
-h1,
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
 h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
 }
 
@@ -65,17 +77,24 @@ button {
   transition: all 0.3s ease;
 }
 
-input {
+input,
+textarea {
   height: 25px;
-  width: 400px;
   padding: 5px;
   border: 1px solid var(--table-color);
   border-radius: 8px;
 }
 
+input[type="date"] {
+  width: 205px;
+}
+
+textarea {
+  height: 150px;
+}
+
 select {
   height: 35px;
-  width: 400px;
   padding: 5px;
   border: 1px solid var(--table-color);
   border-radius: 8px;
@@ -99,6 +118,21 @@ table tbody tr td {
   padding: 3px;
 }
 
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-color);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--table-color);
+  border-radius: 6px;
+}
+
 @media (hover: hover) {
   a:hover {
     color: var(--text-color);
@@ -107,5 +141,9 @@ table tbody tr td {
   button:hover {
     color: var(--text-button-color);
     background-color: var(--accent-color-hover);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--accent-color);
   }
 }
