--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,8 @@ body {
   --accent-color-hover: #9681ff;
   --text-color: #000000;
   --table-color: #c1c1bf;
+  --card-color: #dedede;
+  --card-hover-color: #b2caff;
   --scrollbar-color: #97b8ff;
 
   display: flex;
@@ -57,6 +59,15 @@ h5,
 h6,
 p {
   margin: 0;
+}
+
+h3 {
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 a {
