--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,18 +1,3 @@
-.navMenu {
-  margin: 20px;
-}
-
-.menuButton {
-  padding: 7px 20px;
-  margin: 50px;
-  border-radius: 10px;
-  background-color: var(--accent-color);
-  color: var(--text-button-color);
-}
-
-@media (hover: hover) {
-  .menuButton:hover {
-    color: var(--text-button-color);
-    background-color: var(--accent-color-hover);
-  }
+.text {
+  margin-bottom: 10px;
 }
