--- a/src/components/modals/InconsistenciesAdder/styles.module.css
+++ b/src/components/modals/InconsistenciesAdder/styles.module.css
@@ -22,6 +22,29 @@
   border-radius: 8px;
   box-shadow: 0 0 10px var(--modal-shadow);
   overflow-y: auto;
+  position: relative;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.nonconfNumberBlock {
+  width: 100%;
+}
+
+.nonconfNumberInputBlock {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.nonconfNumberBlock h4 {
+  margin-bottom: 15px;
+  text-align: left;
 }
 
 .modalForm {
