--- a/src/components/modals/commentsAdder/styles.module.css
+++ b/src/components/modals/commentsAdder/styles.module.css
@@ -16,12 +16,25 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px var(--modal-shadow);
+  position: relative;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .modalForm {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.modalForm h3 {
+  text-align: left;
+  width: 70%;
 }
 
 .buttonsBlock {
