--- a/src/components/modals/estimateResult/styles.module.css
+++ b/src/components/modals/estimateResult/styles.module.css
@@ -16,6 +16,19 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px var(--modal-shadow);
+  position: relative;
+}
+
+.modalForm h3 {
+  width: 60%;
+  text-align: left;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .modalForm {
