--- a/src/components/modals/historyCommentsList/styles.module.css
+++ b/src/components/modals/historyCommentsList/styles.module.css
@@ -18,6 +18,20 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px var(--modal-shadow);
+  overflow-y: auto;
+  position: relative;
+}
+
+.modalContent h3 {
+  width: 60%;
+  text-align: left;
+}
+
+.closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 .commentCard {
