--- a/src/components/modals/InconsistenciesAdder/styles.module.css
+++ b/src/components/modals/InconsistenciesAdder/styles.module.css
@@ -32,17 +32,17 @@
   cursor: pointer;
 }
 
-.nonconfNumberBlock {
+.nonConfNumberBlock {
   width: 100%;
 }
 
-.nonconfNumberInputBlock {
+.nonConfNumberInputBlock {
   display: flex;
   gap: 10px;
   align-items: center;
 }
 
-.nonconfNumberBlock h4 {
+.nonConfNumberBlock h4 {
   margin-bottom: 15px;
   text-align: left;
 }
