--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
 
   --accent-color: #421df9;
   --border-shadow-color: rgba(255, 255, 255, 0.5);
-  --modal-shadow: rgba(0, 0, 0, 0.1);
+  --modal-shadow: rgba(0, 0, 0, 0.5);
 }
 
 html {
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  --bg-color: #f5f5f5;
+  --bg-color: rgb(245, 245, 245, 1);
   --text-button-color: #f5f5f5;
   --accent-color-hover: #9681ff;
   --text-color: #000000;
