--- a/src/components/modals/historyCommentsList/styles.module.css
+++ b/src/components/modals/historyCommentsList/styles.module.css
@@ -1,37 +1,11 @@
-.modalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--modal-shadow);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modalContent {
-  display: flex;
+.modalContentSpec {
   flex-direction: column;
   gap: 10px;
-  background-color: var(--bg-color);
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px var(--modal-shadow);
-  overflow-y: auto;
-  position: relative;
 }
 
-.modalContent h3 {
+.modalContentSpec h3 {
   width: 60%;
   text-align: left;
-}
-
-.closeButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  cursor: pointer;
 }
 
 .commentCard {
